--- a/pom.xml
+++ b/pom.xml
@@ -30,6 +30,13 @@
       <version>5.11.4</version>
       <scope>test</scope>
     </dependency>
+
+    <!-- GSON dependency for JSON parsing -->
+    <dependency>
+      <groupId>com.google.code.gson</groupId>
+      <artifactId>gson</artifactId>
+      <version>2.12.1</version>
+    </dependency>
   </dependencies>
 
   <build>
