--- a/pom.xml
+++ b/pom.xml
@@ -37,6 +37,13 @@
       <artifactId>gson</artifactId>
       <version>2.12.1</version>
     </dependency>
+
+    <!-- https://mvnrepository.com/artifact/commons-io/commons-io -->
+    <dependency>
+      <groupId>commons-io</groupId>
+      <artifactId>commons-io</artifactId>
+      <version>2.18.0</version>
+    </dependency>
   </dependencies>
 
   <build>
