--- a/pom.xml
+++ b/pom.xml
@@ -43,6 +43,20 @@
       <artifactId>commons-io</artifactId>
       <version>2.18.0</version>
     </dependency>
+
+    <!-- https://central.sonatype.com/artifact/org.kordamp.ikonli/ikonli-javafx -->
+    <dependency>
+      <groupId>org.kordamp.ikonli</groupId>
+      <artifactId>ikonli-javafx</artifactId>
+      <version>12.3.1</version>
+    </dependency>
+
+    <!-- https://central.sonatype.com/artifact/org.kordamp.ikonli/ikonli-fontawesome5-pack -->
+    <dependency>
+      <groupId>org.kordamp.ikonli</groupId>
+      <artifactId>ikonli-fontawesome5-pack</artifactId>
+      <version>12.3.1</version>
+    </dependency>
   </dependencies>
 
   <build>
