--- a/pom.xml
+++ b/pom.xml
@@ -92,7 +92,7 @@
         <version>0.0.8</version>
         <configuration>
           <!-- https://github.com/openjfx/javafx-maven-plugin -->
-          <mainClass>edu.ntnu.idi.idatt.App</mainClass>
+          <mainClass>edu.ntnu.idi.idatt.MainApp</mainClass>
         </configuration>
       </plugin>
     </plugins>
