create logback.xml add dependencies in pom.xml

--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,26 @@
   </properties>
 
   <dependencies>
+    <!-- SLF4J API dependency -->
+    <dependency>
+      <groupId>org.slf4j</groupId>
+      <artifactId>slf4j-api</artifactId>
+      <version>1.7.36</version>
+    </dependency>
+
+    <!-- Logback dependencies -->
+    <dependency>
+      <groupId>ch.qos.logback</groupId>
+      <artifactId>logback-classic</artifactId>
+      <version>1.2.12</version>
+    </dependency>
+
+    <dependency>
+      <groupId>ch.qos.logback</groupId>
+      <artifactId>logback-core</artifactId>
+      <version>1.2.12</version>
+    </dependency>
+
     <!-- JavaFX framework -->
     <dependency>
       <groupId>org.openjfx</groupId>
@@ -97,5 +117,7 @@
       </plugin>
     </plugins>
   </build>
+
+
 
 </project>
