--- a/.github/workflows/deploy-javadoc.yml
+++ b/.github/workflows/deploy-javadoc.yml
@@ -34,7 +34,7 @@ jobs:
       - name: Upload JavaDoc artifact
         uses: actions/upload-pages-artifact@v3
         with:
-          path: ./target/site/apidocs
+          path: ./target/reports/apidocs
 
   deploy:
     name: Deploy JavaDoc to GitHub Pages
